--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
 </div>
 
 
-<div id="about"> 
-    <div class="card">
-    <h1> About Me</h1>
-    <p> I am Paloma Baker. 23. This is my about me. </p>
-    
+<div id="about" class="row"> 
+    <div class="left-card">
+        <h1> About Me </h1>   
+     </div>
+   
+     <div class = "right-card">
+        <p> I am Paloma Baker. 23. This is my about me. </p>
     </div>
 </div>
+
 <div id="portfolio"> 
     <div class="card">
     <h1> Previous Work </h1> 
