--- a/index.html
+++ b/index.html
@@ -9,47 +9,50 @@
 </head>
 <body>
     <!-- Header with a Nav Bar for About, Work, and Contact Info-->
-    <header> <img class="logo" src="Assets/PALOMA BAKER-2.png" alt="logo"> 
-    <nav> 
-        <ul class="nav_links" >
-            <li> <a href="#about"> About </a></li>
-            <li> <a href="#portfolio"> Portfolio </a></li>
-       </ul>
-    </nav>
-    <a class="cta" href="#contact"><button> Contact</button></a>
-</header>
+    <header>
+        <div class="logo">
+            <img src="Assets/PALOMA BAKER-2.png" alt="logo">
+        </div>
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+            </ul>
+        </nav>
+        <a class="cta" href="#contact"><button>Contact</button></a>
+    </header>
 
-<div class="hero"> 
-    <img class="hero_image" src="Assets/HEROIMG.png" alt="hero image">
-</div>
-
-
-<div id="about" class="row"> 
-    <div class="left-card">
-        <h1> About Me </h1>   
-     </div>
-   
-     <div class = "right-card">
-        <p> I am Paloma Baker. 23. This is my about me. </p>
+    <div class="hero">
+        <img class="hero_image" src="Assets/HEROIMG.png" alt="hero image">
     </div>
-</div>
 
-<div id="portfolio"> 
-    <div class="card">
-    <h1> Previous Work </h1> 
-    <p> I have no work yet</p>
+    <div id="about" class="row">
+        <div class="left-card">
+            <h1>About Me</h1>
+            <p>I am Paloma Baker. 23. This is my about me.</p>
+        </div>
     </div>
-</div>
-<div id="contact">
-    <div class="card">
-    <h1> Contact Information</h1>
-    <p> This is my very professional contact info </p>
-    </div>
-</div>
-    <!-- Links in Nav need to lead to corresponding section -->
-    <!-- Larger image when hovering over portfolio content-->
-    <!-- When clicking the image for the app it takes you to that app-->
-    <!-- Layout Responds to Screensizes -->
 
+    <div id="portfolio">
+        <div class="card">
+            <h1>Previous Work</h1>
+            <div class="portfolio_grid">
+                <a href="application1.html" target="_blank">
+                    <img src="Assets/app1.jpg" alt="Application 1">
+                    <span>Application 1</span>
+                </a>
+                <!-- Add more applications here -->
+            </div>
+        </div>
+    </div>
+
+    <div id="contact">
+        <div class="card">
+            <h1>Contact Information</h1>
+            <p>This is my very professional contact info.</p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
