removing hero image and right card styles

--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
         <a class="cta" href="#contact"><button>Contact</button></a>
     </header>
 
-    <div class="hero">
-        <img class="hero_image" src="Assets/HEROIMG.png" alt="hero image">
-    </div>
-
     <div id="about" class="row">
         <div class="left-card">
             <h1>About Me</h1>
@@ -33,9 +29,11 @@
         </div>
     </div>
 
+ 
+
     <div id="portfolio">
-        <div class="card">
-            <h1>Previous Work</h1>
+        <div class="left-card">
+            <h1>My Portfolio</h1>
             <div class="portfolio_grid">
                 <a href="application1.html" target="_blank">
                     <img src="Assets/app1.jpg" alt="Application 1">
@@ -47,7 +45,7 @@
     </div>
 
     <div id="contact">
-        <div class="card">
+        <div class="left-card">
             <h1>Contact Information</h1>
             <p>This is my very professional contact info.</p>
         </div>
